# rust-todo-list

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
src/: cli.rs  main.rs
src/config/: loader.rs  logging.rs  mod.rs
src/error/: mod.rs
src/storage/: file.rs  mod.rs
src/task/: manager.rs  mod.rs  model.rs  status.rs
