[package]
name = "task"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tempfile = "3.27.0"
dirs = "6.0.0"
toml = "1.0.7"
log = "0.4.29"
env_logger = "0.11.9"
